[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surveylog"
version = "1.0.0"
description = "Sensorunabhängige Vermessungs-Datenpipeline für archäologische Feldarbeit"
authors = [{name = "Martin Fera", email = "martin.fera@univie.ac.at"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pyserial>=3.5",
    "click>=8.0",
]

[project.scripts]
surveylog = "surveylog.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["surveylog*"]
